2004-11-10  David Edelsohn  <edelsohn@gnu.org>

	* config/rs6000/rs6000.md (define_attr "type"): Add two and three.
	Change multi-instruction sequences to new attribute.
	* config/rs6000/{40x.md,440.md,603.md,6xx.md,
	7450.md,7xx.md,8540.md,mpc.md,power4.md,power5.md,
	rios1.md,rios2.md,rs64.md}: Add descriptions for two and three.

2004-11-10  Daniel Berlin  <dberlin@dberlin.org>

	* tree-data-ref.c (build_classic_dist_vector): If either loop
	is outside of the nest we asked about, the dependence can't
	matter.	
	(build_classic_dir_vector): Ditto.

2004-11-10  Zdenek Dvorak  <dvorakz@suse.cz>

	* tree-ssa-loop-ivopts.c (get_address_cost): Add address elements in
	right order.
	(force_var_cost): Determine cost of addition and multiplication more
	precisely.
	(get_computation_cost_at): Add cost for computing address elements to
	the final cost.

	* fold-const.c (fold): Attempt to use ptr_difference_const whenever
	one of the arguments of MINUS_EXPR is an address.
	(split_address_to_core_and_offset): New function.
	(ptr_difference_const): Handle case when one of the operands is a
	pointer.
	* tree-ssa-loop-ivopts.c (determine_base_object): Fold &*addr.
	(ptr_difference_cost): Pass addresses instead of objects to
	ptr_difference_const.

2004-11-10  Nathan Sidwell  <nathan@codesourcery.com>

	* tree.c (tree_check_failed): Emit general error if the list of
	node types is empty.

2004-11-10  Eric Botcazou  <ebotcazou@libertysurf.fr>

	* config/sparc/sparc.c (function_arg_union_value): New 'slotno'
	argument.  When the union is passed in the 6th slot, build a
	PARALLEL with only one element.
	(function_arg): Adjust call to function_arg_union_value.
	(function_value): Likewise.

2004-11-10  Fariborz Jahanian <fjahanian@apple.com>

	PR tree-optimization/17892
    	* tree-ssa-dom.c (unsafe_associative_fp_binop): Add test for
	MINUS_EXPR operator.

2004-11-10  James A. Morrison  <phython@gcc.gnu.org>

	PR target/18230
	(addsi3, subsi3): Set "fptype" attribute.